--- a/edit.html
+++ b/edit.html
@@ -46,6 +46,7 @@
                         <textarea class="edit-content"></textarea>
                     </label>
                 </form>
+                <button id="copy-btn" class="copy-btn">내용복사</button>
             </div>
             <div class="edit-footer">
                 <button id="edit-button" form="edit-form">수정</button>
@@ -70,5 +71,13 @@
                 </label>
             </section>
         </main>
+        <footer>
+            <template id="toast-template">
+                <div id="toast-message">
+                    <p id="toast-p">토스트 메시지</p>
+                    <button id="toast-close-btn">x</button>
+                </div>
+            </template>
+        </footer>
     </body>
 </html>
