[0905] 윤준수 section05 과제 완료

--- a/diary.html
+++ b/diary.html
@@ -146,7 +146,7 @@
     <div id="modal_depth1"></div>
     <div id="modal_depth2"></div>
 
-    <div id="modal_main_add">
+    <div id="modal_main_add" class="depth1">
       <div id="addModal" class="active">
         <h2>📍 일기 쓰기</h2>
         <!-- <form id="diaryForm" onsubmit="onAddDiary(event); false;"> -->
@@ -204,7 +204,7 @@
       </div>
     </div>
 
-    <div id="modal_remove_list">
+    <div id="modal_remove_list" class="depth1">
       <h4>일기 삭제</h4>
       <p>일기를 삭제 하시겠어요??</p>
       <div class="buttons_box">
@@ -222,7 +222,7 @@
     </div>
 
     <!-- <div id="modal_depth2_main_added"> -->
-    <div id="added_modal">
+    <div id="added_modal" class="depth2">
       <h4>일기 등록 완료</h4>
       <p>등록이 완료 되었습니다.</p>
       <button
@@ -232,7 +232,7 @@
       </button>
     </div>
 
-    <div id="cancel_prompt_modal">
+    <div id="cancel_prompt_modal" class="depth2">
       <h4>일기 등록 취소</h4>
       <p>일기 등록을 취소하시겠어요?</p>
       <div class="buttons_box">
