--- a/homework/diary/detail.html
+++ b/homework/diary/detail.html
@@ -7,10 +7,26 @@
     <body>
         <div class="CSS_레이아웃">
             <div class="CSS_배너제목">민지의 다이어리</div>
-            <div class="CSS_상세메인">
-                <div class="CSS_상세메인타이틀">이거슨 타이틀 입니다</div>
+            <div class="CSS_디테일상세메인">
+                <div id="HTML_제목들어가는곳" class="CSS_상세메인타이틀"></div>
+
+                <div class="CSS_감정날짜상자">
+                    <div class="CSS_감정상자">
+                        <div id="HTML_감정사진들어가는곳"></div>
+                        <div id="HTML_감정메시지들어가는곳"></div>
+                    </div>
+                    <div id="HTML_날짜들어가는곳"></div>
+                </div>
+
+                <div class="CSS_디테일제목">제목</div>
+                <div id="HTML_내용들어가는곳"></div>
+            </div>
+            <div class="CSS_수정버튼상자">
+                <button button class="CSS_수정버튼" onclick="JS_수정기능()">
+                    수정
+                </button>
             </div>
         </div>
-        <script src="./index.js"></script>
+        <script src="./detail.js"></script>
     </body>
 </html>
