--- a/css-js/homework/diary-savor/diary-main/diary-saver.html
+++ b/css-js/homework/diary-savor/diary-main/diary-saver.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Diary Saver</title>
     <link rel="stylesheet" href="./diary-saver.css" />
   </head>
@@ -96,6 +97,9 @@
         <p class="copyright">copyright@2024.SY Co., Ltd.</p>
       </div>
     </div>
+
+    <!-- 모달창 -->
+    <div></div>
     <script src="./diary-saver.js"></script>
   </body>
 </html>
