--- a/css-js/homework/diary-savor/diary-main/diary-saver.html
+++ b/css-js/homework/diary-savor/diary-main/diary-saver.html
@@ -94,7 +94,7 @@
       <div class="user-info">
         <p class="diary-title">수연이의 다이어리</p>
         <p class="owner">대표: 김수연</p>
-        <p class="copyright">copyright@2024.SY Co., Ltd.</p>
+        <p class="copyright">copyright@2024.KSY Co., Ltd.</p>
       </div>
     </div>
 
