--- a/section05/index.html
+++ b/section05/index.html
@@ -12,8 +12,50 @@
   <body>
     <div class="app">
       <div class="app-modal">
-        <div class="modal-floor"></div>
-        <div class="modal-add-item"></div>
+        <div class="modal-floor" onclick="closeModal('.app-modal')"></div>
+        <div class="modal-add-item">
+          <h2 class="side-title">일기 쓰기</h2>
+          <form class="register">
+            <fieldset>
+              <div class="form-area">
+                <h3 class="form-title">오늘 기분은 어땠나요?</h3>
+                <div class="emotions flexbox">
+                  <div class="emotion flexbox align-center">
+                    <input type="radio" id="happy" name="emotion" />
+                    <label for="happy" class="emotion-label emotion-happy">행복해요</label>
+                  </div>
+                  <div class="emotion flexbox align-center">
+                    <input type="radio" id="sad" name="emotion" />
+                    <label for="sad" class="emotion-label emotion-sad">슬퍼요</label>
+                  </div>
+                  <div class="emotion flexbox align-center">
+                    <input type="radio" id="surprising" name="emotion" />
+                    <label for="surprising" class="emotion-label emotion-surprising">놀랐어요</label>
+                  </div>
+                  <div class="emotion flexbox align-center">
+                    <input type="radio" id="angry" name="emotion" />
+                    <label for="angry" class="emotion-label emotion-angry">화나요</label>
+                  </div>
+                  <div class="emotion flexbox align-center">
+                    <input type="radio" id="etc" name="emotion" />
+                    <label for="etc" class="emotion-label emotion-etc">기타</label>
+                  </div>
+                </div>
+                <div class="input-title-area">
+                  <label for="input-title">제목</label>
+                  <input type="text" id="input-title" placeholder="제목을 입력해 주세요." />
+                </div>
+                <div class="input-content-area">
+                  <label for="input-content">내용</label>
+                  <textarea id="input-content" placeholder="내용을 입력해 주세요."></textarea>
+                </div>
+              </div>
+              <div>
+                <button class="button-register" type="button" onclick="saveDiary()">등록하기</button>
+              </div>
+            </fieldset>
+          </form>
+        </div>
       </div>
       <header class="header">
         <h1 class="header-title">
@@ -48,7 +90,7 @@
                     <option>기타</option>
                   </select>
                 </div>
-                <button class="show-modal-add">
+                <button type="button" class="show-modal-add" onclick="showModal('.app-modal')">
                   <img src="./assets/images/icon_plus.svg" alt="" class="icon-plus" />
                   <span class="button-text">일기쓰기</span>
                 </button>
