--- a/01-diary/index.html
+++ b/01-diary/index.html
@@ -101,7 +101,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="HTML_write_diary_modal_bg" class="write_diary_modal_bg">
+                <div id="HTML_write_diary_modal_bg" class="write_diary_modal_bg" onclick="dismiss()">
                     <div id="HTML_write_diary_modal_container" class="write_diary_modal_container">
                         <div class="write_diary_title">일기 쓰기</div>
                         <div class="write_diary_mood_items">
