✨ feat: 상세 페이지 일기 내용 복사 기능 추가

--- a/section05/detail.html
+++ b/section05/detail.html
@@ -29,7 +29,7 @@
             <div class="detail-content">
               <h3>내용</h3>
               <div class="detail-content-text"></div>
-              <button class="button-copy">
+              <button class="button-copy" onclick="copyContent()">
                 <img src="./assets/images/icon_copy.svg" alt="" />
                 <span>내용 복사</span>
               </button>
