--- a/section05/index.html
+++ b/section05/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="app">
-      <div class="app-modal">
+      <div class="app-modal" id="app-modal-add">
         <div class="modal-floor" onclick="closeModal('.app-modal')"></div>
         <div class="modal-add-item">
           <h2 class="side-title">일기 쓰기</h2>
@@ -50,11 +50,24 @@
                   <textarea id="input-content" placeholder="내용을 입력해 주세요."></textarea>
                 </div>
               </div>
-              <div>
-                <button class="button-register" type="button" onclick="saveDiary()">등록하기</button>
+              <div class="flexbox modal-actions">
+                <button type="button" class="button-cancel" onclick="showModal('#app-modal-cancel')">닫기</button>
+                <button type="button" class="button-register" type="button" onclick="saveDiary()">등록하기</button>
               </div>
             </fieldset>
           </form>
+        </div>
+
+        <div class="app-modal" id="app-modal-cancel">
+          <div class="modal-floor" onclick="closeModal('#app-modal-cancel')"></div>
+          <div class="modal-add-cancel">
+            <h2>일기 등록 취소</h2>
+            <p>일기 등록을 취소하시겠어요?</p>
+            <div class="flexbox modal-actions">
+              <button type="button" class="button-keep" onclick="closeModal('#app-modal-cancel')">계속 작성</button>
+              <button type="button" class="button-add-cancel" onclick="closeModal('.modal')">등록 취소</button>
+            </div>
+          </div>
         </div>
       </div>
       <header class="header">
@@ -90,7 +103,7 @@
                     <option>기타</option>
                   </select>
                 </div>
-                <button type="button" class="show-modal-add" onclick="showModal('.app-modal')">
+                <button type="button" class="show-modal-add" onclick="showModal('#app-modal-add')">
                   <img src="./assets/images/icon_plus.svg" alt="" class="icon-plus" />
                   <span class="button-text">일기쓰기</span>
                 </button>
