--- a/depth01/myDiary_detail.html
+++ b/depth01/myDiary_detail.html
@@ -15,7 +15,6 @@
                     <img src="../asset/icon/leftenable_outline_light_m.png" />
                 </div>
                 <div class="header__text">일기 보기</div>
-                <div class="header__text">일기 수정</div>
             </a>
         </div>
 
@@ -100,6 +99,7 @@
                     <div class="list__date">2024. 09. 24 작성</div>
                 </div>
             </div>
+            <div class="comment__void"></div>
         </div>
     </div>
 </body>
