✨ 일기 등록 모달에서 등록 취소 버튼 클릭 시 모든 모달 닫히는 기능 추가

--- a/section05/index.html
+++ b/section05/index.html
@@ -66,7 +66,7 @@
           <p>일기 등록을 취소하시겠어요?</p>
           <div class="flexbox modal-actions">
             <button type="button" class="button-keep" onclick="closeModal('#app-modal-cancel', 'nested')">계속 작성</button>
-            <button type="button" class="button-add-cancel" onclick="closeModal('.modal')">등록 취소</button>
+            <button type="button" class="button-add-cancel" onclick="closeModal('.app-modal')">등록 취소</button>
           </div>
         </div>
       </div>
