[240906] JS: 일기 상세 - 삭제 버튼 클릭 시, 삭제 확인 모달 구현

--- a/01-diary/detail/detail.html
+++ b/01-diary/detail/detail.html
@@ -60,6 +60,18 @@
             </div>
         </section>
     </div>
+    <div id="HTML_write_diary_delete_select_modal_bg" class="write_diary_delete_select_modal_bg">
+        <div id="HTML_write_diary_delete_select_modal_container" class="write_diary_delete_select_modal_container">
+            <div class="write_diary_modal_title_items">
+                <div class="write_diary_delete_select_modal_title">일기 삭제</div>
+                <div class="write_diary_delete_select_modal_text">일기를 삭제 하시겠어요?</div>
+            </div> <!-- write_diary_cancel_title_items -->
+            <div class="write_diary_delete_modal_button_items">
+                <button class="write_diary_delete_cancel_button" onclick="deleteCancelButtonPressed()">취소</button>
+                <button class="write_diary_delete_ok_button" onclick="deleteOkButtonPressed()">삭제</button>
+            </div>
+        </div>
+    </div>
     <div id="HTML_toast_message_container" class="toast_message_container">
         <div id="HTML_toast_message" class="toast_message">내용이 복사되었습니다.</div>
     </div>
