--- a/section05/detail.html
+++ b/section05/detail.html
@@ -10,6 +10,17 @@
   </head>
   <body>
     <div class="app">
+      <div class="app-modal" id="app-modal-delete">
+        <div class="modal-floor" onclick="closeModal('#app-modal-delete', 'nested')"></div>
+        <div class="modal-add-delete modal-nested">
+          <h2>일기 삭제</h2>
+          <p>일기를 삭제하시겠어요?</p>
+          <div class="flexbox modal-actions">
+            <button type="button" class="button-cancel" onclick="closeModal('#app-modal-delete')">취소</button>
+            <button type="button" class="button-delete" onclick="deleteItem()">삭제</button>
+          </div>
+        </div>
+      </div>
       <header class="header">
         <h1 class="header-title">
           <a href="./index.html">다인의 다이어리</a>
@@ -36,7 +47,7 @@
             </div>
             <div class="actions flexbox">
               <a class="button-edit" onclick="goToEdit()">수정</a>
-              <button class="button-delete" onclick="deleteItem()">삭제</button>
+              <button class="button-delete" onclick="showModal('#app-modal-delete')">삭제</button>
             </div>
           </div>
           <div class="review" id="review">
